On very small devices the social buttons were overspilling, now resolved

--- a/client/src/pages/Landing.css
+++ b/client/src/pages/Landing.css
@@ -42,3 +42,7 @@
   width: 270px;
   margin: 20px auto;
 }
+
+.second-landing-container-mobile .social-login-button {
+  width: 100%;
+}
